Fix redirection issue